-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.0
-
None
-
52c831db165f5068826dddef4d41427a98a42dfd (qtsensors)
Some comments:
1) The "qmlscene grue.qml" command says that "module Grue is not installed".
2) There are extra things like class documentation in the files, which is not supposed to be there.
3) The directory structure should be flatter, so then the last \example page
should be in a separate child directory.
grue/lib
grue/plugin
grue/console_app
grue/import
grue/qml_app <- the main grue.qml should be in here
QDoc tries to generate the child pages with the current directory structure.
- is required for
-
QTBUG-32580 QDoc: Restore support for outputting to a single directory
-
- Closed
-
- relates to
-
QTBUG-56669 Sensor_explorer example failes to run
-
- Closed
-
-
QTBUG-33875 Command line output from sensors/sensor_explorer Qt example
-
- Closed
-
For Gerrit Dashboard: QTBUG-32881 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
62917,1 | Doc: Update Grue Sensor example | stable | qt/qtsensors | Status: MERGED | +2 | 0 |
63940,4 | Doc: Update Sensor Explorer example | stable | qt/qtsensors | Status: MERGED | +2 | 0 |