Doc: Update Grue Sensor example

Fix a number of issues with the example:
    - Add \omit to generated doc sections, we don't want
      qdoc to process these (not part of Qt docs)
    - Combine the 5 separate examples into a single \example
      and discuss each subproject in a subsection
    - Add example image to doc
    - Fix deployment/build target directories and import paths
    - Define a 'reading' property for the sensor to make it work
      on QtSensors 5.1
    - Fix the Grue QML application to avoid flicker from frequent
      updates.

Task-number: QTBUG-32881
Change-Id: I2785faead1baaf5b1ae9d05df3398e018e945418
Reviewed-by: Jerome Pasion <jerome.pasion@digia.com>
Reviewed-by: Lorn Potter <lorn.potter@jollamobile.com>